Update 'test-chatbot-181201' component image to: quay.io/tpetkos/test-chatbot-181201:75f15f649d0cb6756b1fe88db05cc74e091292b0@sha256:9794c84fcee8758b6aee0f537b0cde64454db61d30a990740425c157ce826814

--- a/components/test-chatbot-181201/overlays/development/deployment-patch.yaml
+++ b/components/test-chatbot-181201/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: test-chatbot-181201
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-ai-dev/ai-template-bootstrap-app:latest # use pre-built to bootstrap 
-        name: app-inference 
+        - image: quay.io/tpetkos/test-chatbot-181201:75f15f649d0cb6756b1fe88db05cc74e091292b0@sha256:9794c84fcee8758b6aee0f537b0cde64454db61d30a990740425c157ce826814 # use pre-built to bootstrap 
+          name: app-inference
